--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 <label>FM stagione precedente – soglia badge
                   <input id="opt_fmPrevBadge" type="number" step="0.01" min="0" max="15" value="6.50" />
                 </label>
-                <label>Affidabilità stagione precedente – soglia (%) 
+                <label>Affidabilità stagione precedente – soglia (%)
                   <input id="opt_affPrevBadge" type="number" step="1" min="0" max="100" value="70" />
                 </label>
-                <!-- NEW: toggle per visualizzare i badge prev season -->
-                <label><input id="opt_showPrevBadges" type="checkbox" /> Mostra i badge della stagione precedente (MV/FM/Aff)</label>
+                <!-- Toggle: visualizza/nasconde tutti i badge della stagione precedente -->
+                <label><input id="opt_showPrevBadges" type="checkbox" /> Mostra i badge della stagione precedente (MV/FM/Aff + cambio ruolo/squadra)</label>
               </div>
             </fieldset>
 
@@ -71,22 +71,37 @@
                   <input id="opt_minPresRankPrev" type="number" step="1" min="0" value="10" />
                 </label>
 
-                <!-- NEW (v1.2.1): Rank FM/MV – stagioni indipendenti -->
+                <!-- NEW: Rank FM/MV – stagioni indipendenti -->
                 <label>Badge rank FM – stagione
                   <select id="opt_rankBadgeSeasonFM">
                     <option value="">Nessuna</option>
                   </select>
                 </label>
-
                 <label>Badge rank MV – stagione
                   <select id="opt_rankBadgeSeasonMV">
                     <option value="">Nessuna</option>
                   </select>
                 </label>
 
-                <!-- Rimane per i dettagli nelle card (percentili/z-score) -->
+                <!-- Rimane per le card (percentile/z-score su PREV) -->
                 <label>Ranking (Stag. precedente) – metrica badge
                   <select id="opt_rankBadgeMetric"><option value="FM" selected>FM</option><option value="MV">MV</option></select>
+                </label>
+              </div>
+            </fieldset>
+
+            <fieldset>
+              <legend>Badge per anno (valori)</legend>
+              <div class="grid-2">
+                <label>Badge FM/MV – stagione
+                  <select id="opt_badgeSeasonValues">
+                    <option value="">Nessuna</option>
+                  </select>
+                </label>
+                <label>Badge Aff – stagione
+                  <select id="opt_badgeSeasonAff">
+                    <option value="">Nessuna</option>
+                  </select>
                 </label>
               </div>
             </fieldset>
@@ -102,24 +117,6 @@
                   <label><input id="opt_histShowBM" type="checkbox" checked /> Mostra Bonus/malus</label><br>
                   <label><input id="opt_histShowPerPres" type="checkbox" checked /> Mostra Statistiche per presenza</label>
                 </div>
-              </div>
-            </fieldset>
-
-            <fieldset>
-              <legend>Badge per anno (valori)</legend>
-              <div class="grid-2">
-                <!-- v1.2: badge con valori FM/MV su stagione scelta -->
-                <label>Badge FM/MV – stagione
-                  <select id="opt_badgeSeasonValues">
-                    <option value="">Nessuna</option>
-                  </select>
-                </label>
-                <!-- v1.2: badge Aff su stagione scelta -->
-                <label>Badge Aff – stagione
-                  <select id="opt_badgeSeasonAff">
-                    <option value="">Nessuna</option>
-                  </select>
-                </label>
               </div>
             </fieldset>
 
